--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,11 @@ h1 {
 }
 
 p {
-    font-family: "Poppins", sans-serif;
-    font-weight: normal;
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
 }
 
-.hero
+.hero {
+  background: #f9f7fe;
+  text-align: center;
+}
