--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
   font-family: "Playfair Display", serif;
   font-weight: bold;
@@ -15,6 +20,5 @@ p {
 }
 
 .hero p {
-  font-family: "Poppins", sans-serif;
   font-size: 36px;
 }
