--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,10 @@ h6 {
   font-weight: bold;
 }
 
+h1 {
+  font-size: 96px;
+}
+
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -21,4 +25,5 @@ p {
 
 .hero p {
   font-size: 36px;
+  font-weight: bold;
 }
