--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,12 @@ h1 {
   font-size: 96px;
 }
 
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: normal;
+}
+
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
