--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,6 @@ h1 {
   font-size: 96px;
 }
 
-h2 {
-  font-family: "Poppins", sans-serif;
-  font-size: 24px;
-  font-weight: normal;
-}
-
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -32,4 +26,10 @@ p {
 .hero p {
   font-size: 36px;
   font-weight: bold;
+}
+
+.hero h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: normal;
 }
