--- a/src/styles.css
+++ b/src/styles.css
@@ -27,10 +27,12 @@ p {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
+  color: #272142;
 }
 
 .hero h2 {
   font-family: "Poppins", sans-serif;
   font-size: 24px;
   font-weight: normal;
+  line-height: 2;
 }
