--- a/src/styles.css
+++ b/src/styles.css
@@ -40,4 +40,9 @@ p {
 .btn-branding {
   background: #6c63ff;
   border-radius: 4;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
 }
