--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -5,8 +12,12 @@ h4,
 h5,
 h6 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
+}
+
+body {
+  font-family: var(--default-font-family);
 }
 
 h1 {
@@ -14,12 +25,11 @@ h1 {
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
 
 .hero {
-  background: #f9f7fe;
+  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -32,17 +42,16 @@ p {
 }
 
 .hero h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: normal;
   line-height: 2;
 }
 
 .btn-branding {
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4;
   color: white;
-  font-family: "Poppins", sans-serif;
   font-size: 18px;
   line-height: 27px;
   padding: 18px 30px;
