--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,9 @@ p {
 }
 
 @media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
   .project-description {
     padding: 0;
     text-align: center;
