--- a/src/styles.css
+++ b/src/styles.css
@@ -55,6 +55,16 @@ p {
   line-height: 1.5;
 }
 
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4;
