--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,10 @@ p {
   line-height: 80px;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
 .about-section h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
