--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,10 @@ p {
   font-family: var(--default-font-family);
 }
 
+.about-section-content {
+  margin: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4;
