--- a/src/styles.css
+++ b/src/styles.css
@@ -104,8 +104,14 @@ p {
   h2 {
     font-size: 44px;
   }
+
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
