--- a/src/styles.css
+++ b/src/styles.css
@@ -109,6 +109,10 @@ p {
   max-width: 150px;
 }
 
+nav {
+  padding: 20px 0;
+}
+
 nav ul {
   padding: 0;
   margin: 0;
@@ -117,6 +121,7 @@ nav ul {
 nav li {
   display: inline;
   list-style: none;
+  line-height: 42px;
 }
 
 @media (max-width: 900px) {
