--- a/src/styles.css
+++ b/src/styles.css
@@ -122,7 +122,12 @@ nav li {
   display: inline;
   list-style: none;
   line-height: 42px;
-  margin-left: 10px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
 }
 
 @media (max-width: 900px) {
