--- a/src/styles.css
+++ b/src/styles.css
@@ -131,6 +131,10 @@ nav a {
   transition: all 100ms ease-in-out;
 }
 
+nav li.active a {
+  color: var(--branding-color);
+}
+
 nav a:hover {
   color: var(--branding-color);
 }
