--- a/src/styles.css
+++ b/src/styles.css
@@ -136,6 +136,10 @@ nav a:hover {
   color: var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -145,6 +149,21 @@ footer .email-link {
 
 footer .email-link:hover {
   color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
 }
 
 @media (max-width: 900px) {
