--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   font-weight: normal;
   font-size: 16px;
@@ -140,6 +144,12 @@ footer {
   margin: 60px 0;
 }
 
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -188,5 +198,9 @@ footer .social-links a:hover {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  footer .contact-box {
+    padding: 30px;
   }
 }
