Changed branding colour of the portfolio

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --branding-color: rgb(255, 80, 173);
+  --branding-color: #ff50ad;
   --secondary-color: rgb(241, 202, 188);
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
